<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mower</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>

    <string name="add_robot_instruction1">The power button is beneath the machine. Lift the machine in gentle to locate the power button.  Be careful about the blade nearby. Press the power button and hear the "Beep" sound indicating the machine is ready.</string>
    <string name="add_robot_instruction2">Please wait for the initialization of mower. The process will be completed within one minute. After hearing 4 "Beep" sounds, your mower is ready for pairing.</string>
    <string name="setup_map_instruction">Driving the Ladybug to define the operating area. You can easily tap on the screen to start driving Ladybug with joystick.\nPlease drive Ladybug to the appropriate position and press the start button to draw the boundary.</string>

    <string name="back_warning">The update has not been saved, confirm to return?</string>
    <!-- Strings related to login -->
    <string name="action_sign_up">Sign up</string>
    <string name="invalid_password_no_number">Password should contain number</string>
    <string name="agreement_sign_up">I have read and agree to the terms of Service.</string>
    <string name="hint_register_agreement_check">Please read and agree to the terms of Service.</string>
    <string name="hint_login_after_register">Please login</string>

    <!-- settings -->
    <string name="title_settings">Settings</string>
    <string name="title_settings_wifi">WIFI</string>
    <string name="title_settings_mower">Mower Settings</string>
    <string name="title_settings_workonrainydays">Work on rainy days</string>
    <string name="title_settings_updatemowersoftware">Update mower software</string>
    <string name="title_settings_workingmode">Working Mode</string>
    <string name="title_settings_learning">Learning</string>
    <string name="title_settings_working">Working</string>
    <string name="title_settings_learnandwork">Learn then Work</string>
    <string name="title_settings_gradual">Gradual</string>
    <string name="title_settings_explosive">Explosive</string>
    <string name="title_settings_bladeheight">Blade height</string>
    <string name="title_settings_setupmap">Setup map</string>
    <string name="title_settings_clearmap">Clear map</string>
    <string name="title_settings_button_update">Update</string>
    <string name="title_settings_button_latest">Latest</string>
    <string name="title_settings_button_edit">Edit</string>
    <string name="title_settings_button_clear">Clear</string>
    <string name="title_settings_version_prefix">Version: </string>

    <string name="text_settings_workonrainydays">TODO:\nDescription of “work on rainy days”s.\n...\n...\n...  </string>
    <string name="text_settings_updatemowersoftware">TODO: \nDescription of “Update mower software”.\n...\n...\n... </string>
    <string name="text_settings_gradual">TODO: \nDescription of “Gradual mode”.\n...\n...\n... </string>
    <string name="text_settings_explosive">TODO: \nDescription of “Explosive”.\n...\n...\n... </string>
    <string name="text_settings_bladeheight">Drag to set up the mowing height\nNeed to wait 30 seconds after each update to update</string>

    <!-- schedule -->
    <string name="title_schedule">Schedule</string>
    <string name="title_schedule_calendar">Schedule Table</string>
    <!-- weeks -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wensday">Wensday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wen">Wen</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
</resources>