<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_settings_mower"
                android:textColor="#ffffff"
                android:textSize="16sp">
            </TextView>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <!-- workonrainydays-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_workonrainydays"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/settings_item_bg"
            android:padding="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_title"
                android:text="@string/title_settings_workonrainydays"></TextView>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_workonrainydays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"></androidx.appcompat.widget.SwitchCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- updatemowersoftware-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_updatemowersoftware"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/settings_item_bg"
            android:padding="12dp"
            android:layout_marginTop="1dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Settings_item_title"
                    android:text="@string/title_settings_updatemowersoftware"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/Settings_item_subtitle"
                    android:text="@string/title_settings_version_prefix"></TextView>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_updatemowersoftware"
                android:layout_width="90dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_button"
                android:background="@drawable/selector_bg_button_primary"
                android:text="@string/title_settings_button_latest"
                android:enabled="false">
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- gradual-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_gradual"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/settings_item_bg"
            android:padding="12dp"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_title"
                android:text="@string/title_settings_gradual"></TextView>
            <RadioButton
                android:id="@+id/radioButton_gradual"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:theme="@style/Checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"></RadioButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- explosive-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_explosive"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/settings_item_bg"
            android:padding="12dp"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_title"
                android:text="@string/title_settings_explosive"></TextView>
            <RadioButton
                android:id="@+id/radioButton_explosive"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:theme="@style/Checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"></RadioButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- bladeheight-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bladeheight"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/settings_item_bg"
            android:padding="12dp"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_title"
                android:text="@string/title_settings_bladeheight"></TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_enter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"></ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- setupmap-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/settings_item_bg"
            android:padding="12dp"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_title"
                android:text="@string/title_settings_setupmap"></TextView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_setupmap"
                android:layout_width="90dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Settings_item_button"
                android:background="@drawable/selector_bg_button_primary"
                android:text="@string/title_settings_button_clear">
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>