<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_schedule_calendar"
                android:textColor="#ffffff"
                android:textSize="16sp">
            </TextView>
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="8">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/schedule_calendar_bg_dark_gray"
            android:paddingTop="32dp"
            android:paddingBottom="44dp"
            android:weightSum="24">
            <TextView android:text="00:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="01:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="02:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="03:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="04:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="05:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="06:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="07:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="08:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="09:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="10:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="11:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="12:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="13:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="14:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="15:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="16:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="17:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="18:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="19:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="20:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="21:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="22:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
            <TextView android:text="23:00" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:textColor="#AEAEAE" android:textSize="14sp" android:gravity="center|top"></TextView>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/schedule_calendar_bg_light_gray"
            android:layout_weight="1">
            <TextView
                android:text="@string/mon"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/schedule_calendar_bg_dark_gray">
            <TextView
                android:text="@string/tue"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/schedule_calendar_bg_light_gray"
            android:layout_weight="1">
            <TextView
                android:text="@string/wen"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/schedule_calendar_bg_dark_gray">
            <TextView
                android:text="@string/thu"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/schedule_calendar_bg_light_gray"
            android:layout_weight="1">
            <TextView
                android:text="@string/fri"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/schedule_calendar_bg_dark_gray">
            <TextView
                android:text="@string/sat"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_weekday_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/schedule_calendar_bg_light_gray">
            <TextView
                android:text="@string/sun"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textColor="#fff"
                android:textSize="14sp"
                android:gravity="center"></TextView>
        </RelativeLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>